--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -1,257 +1,171 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>UG Academico</title>
-    <link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<link href="{{ asset('css/custom.css')}}" rel="stylesheet"> <!-- Libreria de form wizart matriculacion -->
-<link type="text/css" rel="stylesheet" href="{{ asset('theme/bootstrap/css/bootstrap.min.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('theme/dist/css/AdminLTE.min.css') }}">
-<link type="text/css" rel="stylesheet" href="{{ asset('theme/main.css') }}">
-</head>
-<body class="hold-transition skin-blue sidebar-mini">
-    <div class="wrapper">
+<link type="text/css" rel="stylesheet" href="{{ asset('css/styles/animate.css') }}">
+<link type="text/css" rel="stylesheet" href="{{ asset('css/styles/all.css') }}">
+<link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
+<link type="text/css" rel="stylesheet" href="{{ asset('css/growl/jquery.growl.css') }}" >
+
+<link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/iosOverlay.css') }}">
+<link rel="stylesheet" href="{{ asset('js/lib/iOS-Overlay/css/prettify.css') }}">
+<link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
+
+<script src="{{ asset('js/script/jquery-1.10.2.min.js') }}"></script>
+<script src="{{ asset('js/flavr/flavr.js') }}"></script>
+<script src="{{ asset('js/flavr/flavr.min.js') }}"></script>
+<script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
+<script src="{{ asset('js/mensajes.js') }}"></script>
+
+<script src="{{ asset('js/lib/iOS-Overlay/js/iosOverlay.js') }}"></script>
+<script src="{{ asset('js/lib/iOS-Overlay/js/modernizr-2.0.6.min.js') }}"></script>
+<script src="{{ asset('js/lib/jquery-spin/spin.min.js') }}"></script>
+<script src="{{ asset('js/sistemau.functions.js') }}"></script>
+<script type="text/javascript">
+
+  $(document).ready(function(){
+    setTimeout('login();',1000);
+
+
+  });
+
+var btn_login = 0;
+
+function recordar_pass () {
+    $("#password").hide();
+    $("#iniciar").show();
+    $("#recordar_link").hide();
+    $("#btn_iniciar").hide();
+    $("#enviar_mail").show();
+
+}
+
+function iniciar_sesion () {
+  $("#password").show();
+  $("#btn_iniciar").show();
+  $("#iniciar").hide();
+  $("#enviar_mail").hide();
+  $("#recordar_link").show();
+
+
+}
+
+function enviar_mail (user) {
+
+ $.post('{{path('titulacion_sis_academico_mail')}}', {user: user}, function(data) {
+   alert(data);
+ });
+}
+
+function login(){
+
+    btn_login = btn_login +1*1;
+    if (btn_login == 1) {
+
+
+     $('.login-are').removeAttr('click');
+    var html =
+        ' <div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
+        '   <div class="form-row">' +
+        '       <input id="password1" type="password" name="password1" ' +
+        '       placeholder="Nueva Contraseña"  required /> <p class="help-block"></p>' +
+        '   </div>' +
+        ' <div class="flavr-message"> Confirme su nueva Contraseña:</div>'+
+        '   <div class="form-row">' +
+        '       <input id="password2" type="password" name="password2" ' +
+        '       placeholder="Confirme Contraseña" required /> <p class="help-block"></p>' +
+        '   </div>' +
+        '   <div class="form-row">' +
+        '   </div>';
+
+    new $.flavr({
+        title       : 'Restablecer Contraseña',
+        iconPath    : '{{ asset('images/menu/')}}',
+        icon        : 'ug_logo.png',
+        content     : 'Universidad de Guayaquil',
+        dialog      : 'form',
+        form        : {  content: html, method: 'get'},
+        buttons : {
+        submit  : { text: 'Iniciar', style: 'danger', addClass: 'submit-btn', id: 'btn_iniciar',
+                    action: function( $container, $second, $third ){
+                      if ($("#username").val() == '' || $("#password").val() == '') {
+                          mensaje_cisc( "error", "Ingrese el usuario y el password.");
+                          this.wobble();
+                      }else{
+
+                         $.ajax({
+                             url:   '{{path('titulacion_sis_academico_ingresar')}}',
+                             data: {'user': $("#username").val(),'pass':$("#password").val()},
+
+                             type:  'post',
+                             beforeSend: function () {
+                               // sitioCargado(notificacionIndex);
+                             },
+                             error:function(){
+                                  btn_login = 0;
+                                  mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
+                             },
+                             success:  function (dataResponse) {
+
+                                  switch (dataResponse) {
+
+                                        case '{{perfilEst}}':
+                                            notificacionIndex = cargandoSitio(null, null, null);
+                                            sitioCargado(notificacionIndex);
+                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
+                                            location.href = '{{path('estudiantes_notas_actuales')}}';
+                                            break;
+                                        case '{{perfilDoc}}':
+                                            notificacionIndex = cargandoSitio(null, null, null);
+                                            sitioCargado(notificacionIndex);
+                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
+                                            location.href = '{{path('SisAcademico_Docentes_home')}}';
+                                            break;
+                                        case '{{perfilAdmin}}':
+                                            notificacionIndex = cargandoSitio(null, null, null);
+                                            sitioCargado(notificacionIndex);
+                                            $.growl.error({ message: "Perfil NO habilitado" });
+                                            //alertify.success("Bienvenido "+$("#username").val());
+                                            //location.href = '{#{path('dayscript_minisitio_login')}#}';
+                                            break;
+                                        case '{{perfilEstDoc}}':
+                                            notificacionIndex = cargandoSitio(null, null, null);
+                                            sitioCargado(notificacionIndex);
+                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
+                                            location.href = '{{path('estudiantes_notas_actuales')}}';
+                                            break;
+                                        case '{{perfilEstAdm}}':
+                                            notificacionIndex = cargandoSitio(null, null, null);
+                                            sitioCargado(notificacionIndex);
+                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
+                                            location.href = '{{path('estudiantes_notas_actuales')}}';
+                                            break;
+                                        case '{{perfilDocAdm}}':
+                                            notificacionIndex = cargandoSitio(null, null, null);
+                                            sitioCargado(notificacionIndex);
+                                            mensaje_cisc( "notice", "Bienvenido "+$("#username").val());
+                                            location.href = '{{path('SisAcademico_Docentes_home')}}';
+                                            break;
+                                        default:
+
+                                            mensaje_cisc( "error", "Usuario o constraseña incorrecto/a.");
+                                            break;
+                                    }//end switch
+
+                             },
+                             dataType:'html'
+                          });
+                      }
+
+                        return false;
+                    }
+        }
+
+    }
+
+
+    });
+    }
+    $("#iniciar").hide();
+    $("#enviar_mail").hide();
+}
 
 
 
-      <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper">
-
-
-        <!-- Main content -->
-        <section class="content">
-          <div class="row">
-
-            <!-- right column -->
-            <div class="col-md-6">
-              <!-- Horizontal Form -->
-              <div class="box box-info">
-                <div class="box-header with-border">
-                  <h3 class="box-title">Horizontal Form</h3>
-                </div><!-- /.box-header -->
-                <!-- form start -->
-                <form class="form-horizontal">
-                  <div class="box-body">
-                    <div class="form-group">
-                      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                      <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                      <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-sm-offset-2 col-sm-10">
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox"> Remember me
-                          </label>
-                        </div>
-                      </div>
-                    </div>
-                  </div><!-- /.box-body -->
-                  <div class="box-footer">
-                    <button type="submit" class="btn btn-default">Cancel</button>
-                    <button type="submit" class="btn btn-info pull-right">Sign in</button>
-                  </div><!-- /.box-footer -->
-                </form>
-              </div><!-- /.box -->
-
-            </div><!--/.col (right) -->
-          </div>   <!-- /.row -->
-        </section><!-- /.content -->
-      </div><!-- /.content-wrapper -->
-      <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-          <b>Version</b> 2.3.0
-        </div>
-        <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
-      </footer>
-
-      <!-- Control Sidebar -->
-      <aside class="control-sidebar control-sidebar-dark">
-        <!-- Create the tabs -->
-        <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-          <li><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-          <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <!-- Home tab content -->
-          <div class="tab-pane" id="control-sidebar-home-tab">
-            <h3 class="control-sidebar-heading">Recent Activity</h3>
-            <ul class="control-sidebar-menu">
-              <li>
-                <a href="javascript::;">
-                  <i class="menu-icon fa fa-birthday-cake bg-red"></i>
-                  <div class="menu-info">
-                    <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
-                    <p>Will be 23 on April 24th</p>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="javascript::;">
-                  <i class="menu-icon fa fa-user bg-yellow"></i>
-                  <div class="menu-info">
-                    <h4 class="control-sidebar-subheading">Frodo Updated His Profile</h4>
-                    <p>New phone +1(800)555-1234</p>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="javascript::;">
-                  <i class="menu-icon fa fa-envelope-o bg-light-blue"></i>
-                  <div class="menu-info">
-                    <h4 class="control-sidebar-subheading">Nora Joined Mailing List</h4>
-                    <p>nora@example.com</p>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="javascript::;">
-                  <i class="menu-icon fa fa-file-code-o bg-green"></i>
-                  <div class="menu-info">
-                    <h4 class="control-sidebar-subheading">Cron Job 254 Executed</h4>
-                    <p>Execution time 5 seconds</p>
-                  </div>
-                </a>
-              </li>
-            </ul><!-- /.control-sidebar-menu -->
-
-            <h3 class="control-sidebar-heading">Tasks Progress</h3>
-            <ul class="control-sidebar-menu">
-              <li>
-                <a href="javascript::;">
-                  <h4 class="control-sidebar-subheading">
-                    Custom Template Design
-                    <span class="label label-danger pull-right">70%</span>
-                  </h4>
-                  <div class="progress progress-xxs">
-                    <div class="progress-bar progress-bar-danger" style="width: 70%"></div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="javascript::;">
-                  <h4 class="control-sidebar-subheading">
-                    Update Resume
-                    <span class="label label-success pull-right">95%</span>
-                  </h4>
-                  <div class="progress progress-xxs">
-                    <div class="progress-bar progress-bar-success" style="width: 95%"></div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="javascript::;">
-                  <h4 class="control-sidebar-subheading">
-                    Laravel Integration
-                    <span class="label label-warning pull-right">50%</span>
-                  </h4>
-                  <div class="progress progress-xxs">
-                    <div class="progress-bar progress-bar-warning" style="width: 50%"></div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="javascript::;">
-                  <h4 class="control-sidebar-subheading">
-                    Back End Framework
-                    <span class="label label-primary pull-right">68%</span>
-                  </h4>
-                  <div class="progress progress-xxs">
-                    <div class="progress-bar progress-bar-primary" style="width: 68%"></div>
-                  </div>
-                </a>
-              </li>
-            </ul><!-- /.control-sidebar-menu -->
-
-          </div><!-- /.tab-pane -->
-          <!-- Stats tab content -->
-          <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div><!-- /.tab-pane -->
-          <!-- Settings tab content -->
-          <div class="tab-pane" id="control-sidebar-settings-tab">
-            <form method="post">
-              <h3 class="control-sidebar-heading">General Settings</h3>
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Report panel usage
-                  <input type="checkbox" class="pull-right" checked>
-                </label>
-                <p>
-                  Some information about this general settings option
-                </p>
-              </div><!-- /.form-group -->
-
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Allow mail redirect
-                  <input type="checkbox" class="pull-right" checked>
-                </label>
-                <p>
-                  Other sets of options are available
-                </p>
-              </div><!-- /.form-group -->
-
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Expose author name in posts
-                  <input type="checkbox" class="pull-right" checked>
-                </label>
-                <p>
-                  Allow the user to show his name in blog posts
-                </p>
-              </div><!-- /.form-group -->
-
-              <h3 class="control-sidebar-heading">Chat Settings</h3>
-
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Show me as online
-                  <input type="checkbox" class="pull-right" checked>
-                </label>
-              </div><!-- /.form-group -->
-
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Turn off notifications
-                  <input type="checkbox" class="pull-right">
-                </label>
-              </div><!-- /.form-group -->
-
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Delete chat history
-                  <a href="javascript::;" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
-                </label>
-              </div><!-- /.form-group -->
-            </form>
-          </div><!-- /.tab-pane -->
-        </div>
-      </aside><!-- /.control-sidebar -->
-      <!-- Add the sidebar's background. This div must be placed
-           immediately after the control sidebar -->
-      <div class="control-sidebar-bg"></div>
-    </div><!-- ./wrapper -->
-<script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
-    <script src="{{ asset('theme/bootstrap/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('js/script/jquery-ui.js') }}"></script>
-    <script src="{{ asset('theme/plugins/slimScroll/jquery.slimscroll.min.js') }}"></script>
-    <script src="{{ asset('theme/plugins/fastclick/fastclick.min.js') }}"></script>
-    <script src="{{ asset('theme/dist/js/app.min.js') }}"></script>
-    <script src="{{ asset('theme/dist/js/demo.js') }}"></script>
-
-    <script src="{{ asset('js/sistemau.functions.js') }}"></script>
-    <script src="{{ asset('js/academico.alerts.js') }}"></script>
-    <script src="{{ asset('js/mensajes.js') }}"></script>
-</body>
-</html>
+</script>
