--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -75,7 +75,7 @@
           <a href="{{path('estudiantes_notas_actuales')}}"><i class="fa fa-child"></i></a>
         </li>
          {% endif %}
-         {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilDocAdm %}
+         {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilDocAdm or  app.session.get('perfil') == perfilEstDoc %}
         <li>
           <a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-user-plus"></i></a>
         </li>
